# CppNote

./: .gitignore  FFmpeg.sln  GraphNote.sln  NoteAll.sln  QtNote.sln  README.md  RUN.cmd  SQNote.sln  TestStack.cpp
Note/: README.md
Note/Common/: CArraySort.hpp  CDefine.hpp  CLinearList.hpp  CSingleton.hpp  CToolClass.hpp  Cpplinq.hpp
Note/DOC/: vc12例模板.7z
Note/Frame/: ShutService.hpp  Socket.hpp  WinService.hpp  lpk.hpp
Note/TOOL/: 7zCon.sfx
Resource/: SVM_SPEED.yml  Thumbs.db  num.psd
Resource/OpenSIFT/: Thumbs.db
Resource/OpenSURF/: Thumbs.db
project/Qt5QmlUI/: CMakeLists.txt  QtPlayer.pro  build.bat
project/Qt5QmlUI/Res/: PlayRes.qrc  main.qml
project/Qt5QmlUI/src/: QPublic.cpp  QPublic.h  QtConfig.h  crmsystem.cpp  crmsystem_def.h  tabdb.cpp  tabdb.h  wdb.h
project/Qt5QmlUI/src/OTHER/: QtState.h
project/Qt5QmlUI/vc12/: Qt5QmlUI.vcxproj  Qt5QmlUI.vcxproj.filters  QtConfig_moc.cpp
project/QtTomato/: CMakeLists.txt  QtTomato.pro  build.bat  style.qss
project/QtTomato/res/: res.rc  wdgres.qrc
project/QtTomato/src/: QData.h  QPublic.cpp  QPublic.h  QtConfig.h  appcfg.cpp  appcfg.h  dlgfrm.cpp  dlgfrm.h  dlgfrm.ui  frmnettool.cpp  frmnettool.h  frmnettool.ui  main.cpp  stdafx.cpp  stdafx.h  tabgis.cpp  tabgis.h  tabgui.cpp  tabgui.h  tabnet.cpp  tabnet.h  tabtd.cpp  tabtd.h  tcpserver.cpp  tcpserver.h  waxis.cpp  waxis.h  waxis_def.h  wbase.cpp  wbase.h  wdraw.cpp  wdraw.h  wndmain.cpp  wndmain.h  wpanel.cpp  wpanel.h  wplay.cpp  wplay.h  wplay.ui  wprogressbar.cpp  (+9 more)
project/QtTomato/vc12/: QtConfig_MOC.cpp  QtTomato.vcxproj  QtTomato.vcxproj.filters  Tomocfg.ini
project/SQCore/: CMakeLists.txt  build.bat
project/SQCore/res/: SQCore.rc  resource.h
project/SQCore/src/Clib/: AbstactFactory.hpp  Adapter.hpp  Bridge.hpp  Builder.hpp  CAStar.cpp  CAStar.h  CBITree.cpp  CBITree.h  CDList.cpp  CDList.h  CDijkstra.cpp  CDijkstra.h  CEXAM.hpp  CList.cpp  CList.h  CQueue.cpp  CQueue.h  CRBTree.cpp  CRBTree.h  CStack.cpp  CStack.h  ChainofResponsibilit.hpp  CharPointer.cpp  CharPointer.h  Command.hpp  Composite.hpp  Decorator.hpp  Effective.hpp  Facade.hpp  Factory.hpp  Flyweight.hpp  Interpreter.hpp  Iterator.hpp  Mediator.hpp  Memento.hpp  Observer.hpp  PointerArray.cpp  PointerArray.h  Prototype.hpp  Proxy.hpp  (+8 more)
project/SQCore/src/DUILIB/: HelloDUI.cpp  HelloDUI.h  HelloDUI_def.h  ScrCapture.cpp  ScrCapture.h  UIActiveX.cpp  UIActiveX.h  UIBase.cpp  UIBase.h  UIButton.cpp  UIButton.h  UICheckBox.cpp  UICheckBox.h  UIChildLayout.cpp  UIChildLayout.h  UICombo.cpp  UICombo.h  UIContainer.cpp  UIContainer.h  UIControl.cpp  UIControl.h  UIDateTime.cpp  UIDateTime.h  UIDefine.h  UIDelegate.h  UIDlgBuilder.cpp  UIDlgBuilder.h  UIEdit.cpp  UIEdit.h  UIFlash.cpp  UIFlash.h  UIGifAnim.cpp  UIGifAnim.h  UIHorizontalLayout.cpp  UIHorizontalLayout.h  UILabel.cpp  UILabel.h  UIList.cpp  UIList.h  UIManager.cpp  (+38 more)
project/SQCore/src/DllGui/: BootLoad.cpp  BootLoad.h  FunAll.cpp  FunAll.h  Harkscr.hpp  MiniTools.hpp
project/SQCore/src/Parser/: Convert.cpp  Convert.h  DrvSqlite.cpp  DrvSqlite.h  PrintLog.cpp  PrintLog.h  json11.cpp  json11.h  libxls.h  miniIni.cpp  miniIni.h  sqlite3.h  tinyxml2.cpp  tinyxml2.h
project/SQCore/src/SVM/: CalcFun.cpp  CalcFun.h  svm.cpp  svm.h
project/SQCore/src/WinAPI/: GDIView.cpp  GDIView.h  GDIWindow.h  Service.cpp  Service.h  WinFileSys.cpp  WinFileSys.h  WinFileSys_typedef.h  WinGUI.cpp  WinGUI.h  WinHack.cpp  WinHack.h  WinHack_typedef.h  WinKey.cpp  WinKey.h  WinLogIni.h  WinNetWork.cpp  WinNetWork.h  WinService.cpp  WinService.h  WinSysInfo.cpp  WinSysInfo.h  WinTool.cpp  WinTool.h
project/SQCore/src/WinAPI/1/: GDIPlusView.cpp  GDIView.h  Service.h  WinFileSys.h  WinFileSys_typedef.h  WinGUI.cpp  WinGUI.h  WinLogIni.cpp  WinLogIni.h  WinNetWork.h  WinService.cpp  WinService.h  WinSysInfo.h  WinTool.cpp  WinTool.h
project/SQCore/src/boost/: BoostConfig.h  Boost_FTP.hpp  Boost_Memory.cpp  Boost_Memory.h  Boost_Text.cpp  Boost_Text.h  Boost_proxy.hpp  Boost_thread.cpp  Boost_thread.h  Boost_timer.cpp  Boost_timer.h  SQBoost.cpp  async_op.hpp  async_server_multi_threaded.hpp  coroutines.hpp  ssl_client_connect_to_yahoo.hpp  tcp_async_echo.hpp  tcp_async_server.hpp  tcp_sync_echo.hpp  tcp_sync_server.hpp  udp_sync_echo.hpp
project/SQCore/vc12/: SQCore.cpp  SQCore.vcxproj  SQCore.vcxproj.filters  stdafx.h
project/SQffmpeg/: CMakeLists.txt  build.bat
project/SQffmpeg/res/: GDIPlay.rc  SQffmpeg.rc  ffmpegres.h  gdiplay.h  resource.h
project/SQffmpeg/src/: CMP4.cpp  CMP4.h  CTray.h  GDIPlayer.cpp  GDIPlayer.h  Music.cpp  Music.h  WinMP4.hpp  ffmpeg_audio_decoder - 副本.hpp  ffmpeg_audio_decoder.hpp  ffmpeg_audio_play_sdl2.hpp  ffmpeg_audio_player.hpp  ffmpeg_decoder.hpp  ffmpeg_decoder_pure.hpp  ffmpeg_helloworld.hpp  ffmpeg_picture_encoder.hpp  ffmpeg_player.hpp  ffmpeg_player_su.hpp  ffmpeg_video_play_sdl2.hpp  mpv_hello.hpp  mpv_sdl.hpp  mpv_streamcb.hpp
project/SQffmpeg/vc12/: SQffmpeg.cpp  SQffmpeg.vcxproj  SQffmpeg.vcxproj.filters  stdafx.cpp  stdafx.h
project_APP/GDIPlayer/: CMakeLists.txt  build.bat
project_APP/GDIPlayer/res/: GDIPlay.rc  PLAY001.psd  PLAY002.psd  Thumbs.db  resource.h
project_APP/GDIPlayer/src/: CMP4.cpp  CTemplate.hpp  CToolClass.hpp  CTray.cpp  CTray.h  GDIPlayer.cpp  MainDlg.cpp  MainDlg.h  Music.cpp  Music.h  OpenGLView.cpp  OpenGLView.h  WinGUI.cpp  WinGUI.h  WinMP4.hpp  WinPlayer.cpp  WinPlayer.h  WinPlayer.hpp  stdafx.h
project_APP/GDIPlayer/vc12/: GDIPlayer.sln  GDIPlayer.vcxproj  GDIPlayer.vcxproj.filters
project_APP/MFCGUI/: CMakeLists.txt  build.bat
project_APP/MFCGUI/MFC/: GuiMan.cpp  GuiMan.h  MFCGUI.cpp  MFCGUI.h  MFCGUIDlg.cpp  MFCGUIDlg.h
project_APP/MFCGUI/res/: MFCGUI.rc  MFCGUI.rc2  Resource.h
project_APP/MFCGUI/src/: Game2048.cpp  Game2048.h  MFCGUI.cpp  MFCGUI.h  MFCGUIDlg.cpp  MFCGUIDlg.h  MFCdef.h  Server.cpp  Server.h  ServerDlg.cpp  ServerDlg.h  StdAfx.h  UIEventListener.hpp  myButton.cpp  myButton.h  qrcode.cpp  qrcode.h  targetver.h
project_APP/MFCGUI/vc12/: MFCGUI.vcxproj  MFCGUI.vcxproj.filters  MFCdef.h  stdafx.h
projectconf/: Thumbs.db  v4.0.lnk
(+910 files in other folders)
