# 版本限定
cmake_minimum_required(VERSION 2.8.7)
# 项目名称(sln)
project(GDIPlayer)

# 设置生成路径
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

#设置字符集  
add_definitions(-DUNICODE -D_UNICODE) 
# 设置编译器选项 不显示所有警告
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W0")

# 定义头文件的路径变量
SET(INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/res
 ${CMAKE_CURRENT_SOURCE_DIR}/SRC
 ) 
MESSAGE(STATUS "Include Path, ${INCLUDE_PATH}")

# 定义库文件路径
SET(LIB_PATH ${INCLUDE_PATH})
MESSAGE(STATUS "Libs Path, ${LIB_PATH}")

# 定义源文件路径变量
SET(SOURCE_PATH ${INCLUDE_PATH}) 
MESSAGE(STATUS "Source Path , ${SOURCE_PATH}") 

# 包含头文件搜索路径
INCLUDE_DIRECTORIES(${INCLUDE_PATH}) 
# 包含库搜索路径
LINK_DIRECTORIES(${LIB_PATH})

# 添加源文件路径下所有源文件存放到变量中(*.c && *.cpp)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/res DIR_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SRC DIR_SRCS)
SET(DIR_SRCS ${DIR_SRCS} res/GDIPlay.rc)
#AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SRC/Parser DIR_SRCS)
MESSAGE(STATUS "DIR_SRCS , ${DIR_SRCS}") 

# 设置生成可执行文件的名称
SET(EXECUTABLE_FILE_NAME GDIPlayer)

# 生成可执行文件
ADD_EXECUTABLE(${EXECUTABLE_FILE_NAME} WIN32 ${DIR_SRCS})







